@@ -51,7 +51,8 @@ Version 2.5.0-Beta 1
     * Fixed crash on exit while collection scanner is running. (BR 261421)
     * Fixed collection browser tracks grouping after switching to Merged View. (BR 277015)
     * Prefer track artist to album artist in Albums applet fiter. (BR 266682)
-    * Fix the Metadata, CanGoPrevious and CanGoNext properties of the MPRIS2 interface
+    * Fix the Metadata, CanGoPrevious, CanGoNext and CanSeek properties of the
+      MPRIS2 interface
     * Fixed Wikipedia search field not accepting space character or cursor
       keys. (BR 266591)
     * Fix SupportedMimeTypes method on the MPRIS2 D-Bus interface, so that it
